--- a/public/index.html
+++ b/public/index.html
@@ -8,19 +8,18 @@
   </head>
   <body>
     <header>
-      <a href="/" rel="home">Serverless Workflow for Stripe Checkout</a>
+      <a href="/" rel="home">Exospine Preorder</a>
     </header>
 
     <main>
       <h1>Buy Our Products!</h1>
       <p>
-        This demo is in test mode. That means you can check out using any of the
-        <a href="https://stripe.com/docs/testing#cards">test card numbers</a>.
+        Our product is still undergoing testing. We currently are offering 2 options.
       </p>
       <section class="products"></section>
     </main>
 
-    <footer>
+    <!-- <footer>
       <p>
         Based on an
         <a href="https://www.learnwithjason.dev/sell-products-on-the-jamstack">
@@ -40,7 +39,7 @@
           source code
         </a>
       </p>
-    </footer>
+    </footer> -->
 
     <template id="product">
       <div class="product">
