--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     </header>
 
     <main>
-      <h1>Buy Our Products!</h1>
+      <h1>Buy an Exobrace!</h1>
       <p>
         Our product is still undergoing testing. We currently are offering 2 options.
       </p>
